# my-fv-solver

./: CMakeLists.txt
input_files/: heat_mesh_file.msh  mesh_file.txt  rod_convection.msh  rod_convection_fine.msh  simple_rod.msh  simple_rod_tetras.msh
output_files/: komega_sst_flow_solution.vtk  output_mesh.vtk  output_results.vtk  output_rod_results.vtk  output_rod_tetras.vtk  state.pvsm  steady_convection.vtk  steady_convectionDiffusion.vtk  steady_convectionDiffusion_fine.vtk  steady_diffusion.vtk  transient_heat_conduction.vtk
src/: main.cpp
src/BoundaryConditions/: BoundaryConditions.h  BoundaryData.h  BoundaryPatch.h
src/Mesh/: Cell.h  Face.h  MeshReader.cpp  MeshReader.h  Scalar.h  Vector.h
src/Numerics/: CellData.h  ConvectionScheme.cpp  ConvectionScheme.h  FaceData.h  GradientScheme.cpp  GradientScheme.h  KOmegaSST.cpp  KOmegaSST.h  LinearSolvers.cpp  LinearSolvers.h  MatrixConstructor.cpp  MatrixConstructor.h  SIMPLE.cpp  SIMPLE.h  massFlowRate.cpp  massFlowRate.h
src/PostProcessing/: VtkWriter.cpp  VtkWriter.h
